--- a/preamble.tex
+++ b/preamble.tex
@@ -66,6 +66,8 @@
 
 \setchemfig{atom sep=2em,fixed length=true,bond offset=3pt}
 
+\newcommand{\N}{\mathbb{N}}
+
 \newcommand{\kB}{k_\text{B}}
 \newcommand{\NA}{N_\text{A}}
 
