--- a/preamble.tex
+++ b/preamble.tex
@@ -61,6 +61,7 @@
 \colorlet{pux}{blx!50!rex!50!magenta}
 
 \DeclareMathOperator{\Prob}{Prob}
+\DeclareMathOperator{\cis}{cis}
 \DeclareMathOperator{\pH}{pH}
 \DeclareMathOperator{\pOH}{pOH}
 
