Prof Office Hours 5

--- a/Notes/Week8/week8.tex
+++ b/Notes/Week8/week8.tex
@@ -348,5 +348,42 @@
 
 
 
+\section{Office Hours (Tian)}
+\begin{itemize}
+    \item The whole $F\propto\sigma\rho$ thing from Lecture 4.
+    \item The presence of lack thereof of the $1/2$ coefficient in $Z_{\ce{A}\ce{A}}$ and $Z_{\ce{A}\ce{B}}$.
+    \item Lecture 13 example problems.
+    \begin{itemize}
+        \item Equilibrium constants appear in reversible reactions.
+        \item Only applicable for reversible elementary steps.
+        \item If there's a problem that involves equilibrium constants, he will identify it; tell us that a reaction is reversible and equilibrium constants need to be considered.
+    \end{itemize}
+    \item Will there be extra office hours before the final?
+    \item Midterm info.
+    \begin{itemize}
+        \item The midterm had a bimodal (2 peaks) distribution.
+    \end{itemize}
+    \item Miller indices.
+    \begin{itemize}
+        \item We define 100 planes by convention.
+        \item The middle plane in Figure 31.9a intersects the $a$-axis at $(1,0,0)$, and never intersects the $b$ or $c$ axes. However, we can conceptually define an intersection at $\infty$, leading to $k=b/\infty=0$ and similarly for $l$.
+    \end{itemize}
+    \item Final info.
+    \begin{itemize}
+        \item Homeworks 5-6 for the computation problem.
+        \item Rest are true/false and conceptual (like defining the Miller indices, for example).
+        \item Open note, calculator, but not open internet.
+        \item We can bring our computer for online notes, but we cannot search anything.
+        \item Only conceptual problems on X-ray diffraction.
+        \item No class on Friday Week 9.
+    \end{itemize}
+    \item X-ray diffraction info.
+    \begin{itemize}
+        \item Some people who have taken Advanced Inorgo will have already seen this, but it's the first time for most people.
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
