--- a/Notes/Week7/week7.tex
+++ b/Notes/Week7/week7.tex
@@ -507,5 +507,23 @@
 
 
 
+\section{Chapter 30: Gas-Phase Reaction Dynamics}
+\emph{From \textcite{bib:McQuarrieSimon}.}
+\begin{itemize}
+    \item \marginnote{5/21:}We will now build a molecular picture of the \ce{F + D2} chemical reaction from the crossed molecular beam data. We take $E_\text{react}=\SI{7.62}{\kilo\joule\per\mole}$ throughout the following, as per the previous example.
+    \item The \emph{angle} with which the molecules reach the detector.
+    \begin{itemize}
+        \item As per Figure \ref{fig:COMcoordinates} and the associated discussion, $\mathbf{u}_{\ce{DF}}'$ and $\mathbf{u}_{\ce{D}}'$ are not independent but are related by the conservation laws for mass, momentum, and energy.
+        \item However, even though this means that \ce{DF} and \ce{D} could theoretically part ways in any manner consistent with these three laws, in reality, they will go their separate ways in some directions far more often than others, as dictated by the dynamics of this particular reaction.
+        \item Let's consider these dynamics in greater detail, as facilitated by Figure \ref{fig:velocityAngleDist}.
+        \begin{itemize}
+            \item In this picture, we take as our reference frame the perspective of spherically symmetric molecule \ce{B} and let \ce{A} approach.
+            \item For $b$ fixed, the distribution in $\phi$ will be cylindrically symmetric.
+        \end{itemize}
+    \end{itemize}
+\end{itemize}
+
+
+
 
 \end{document}
